# corgi_walk

./: CMakeLists.txt  README.md  package.xml
include/: walk_gait.hpp  walk_trajectory.hpp
src/: CMakeLists.txt  walk_class.cpp  walk_exp.cpp  walk_gait.cpp  walk_gait_main.cpp  walk_main.cpp  walk_sim.cpp  walk_test.cpp  walk_trajectory.cpp
